# treepeek

./: .gitignore  README.md  package.json  tsconfig.json
scripts/: build.ts
server/: Cargo.toml  build.rs
server/src/: assets.rs  auth.rs  device_store.rs  diff.rs  file.rs  git.rs  history.rs  main.rs  network.rs  outline.rs  passkey.rs  push.rs  registry.rs  search.rs  server.rs  tunnel.rs  walker.rs  watcher.rs
src/: assets.ts  auth.ts  file.ts  git.ts  network.ts  server.ts  tunnel.ts  walker.ts  watcher.ts
src/client/: App.tsx  highlight.ts  highlightWorker.ts  index.html  main.ts  main.tsx  styles.css
src/client/components/: AuthGate.tsx  DiffView.tsx  FileView.tsx  FolderList.tsx  HistoryList.tsx  OutlinePanel.tsx  PulseView.tsx  SearchBar.tsx  SearchList.tsx  SettingsSheet.tsx  Sheet.tsx  TreeView.tsx  ViewToggle.tsx  icons.tsx
src/client/lib/: api.ts  fileIcon.ts  formatSize.ts  haptics.ts  highlighter.ts  lineHash.ts  push.ts  settings.ts  themeColor.ts  useDropdownState.ts  webauthn.ts
