[package]
name = "treepeek"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "treepeek"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs", "sync", "process", "signal"] }
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
http = "1"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
web-push = "0.10"
jwt-simple = { version = "0.11", default-features = false }
qrcode = { version = "0.14", default-features = false }
if-addrs = "0.13"
base64 = "0.22"
rand = "0.8"
subtle = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
libc = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
percent-encoding = "2"
tokio-tungstenite = "0.21"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
